WEEK 7 Implemented need testing only
